--- a/index.html
+++ b/index.html
@@ -10,33 +10,37 @@
     <div class="content_area">
         <div class="left-section">
             <div class="title_main">
-                <h1>Цукерочки</h1>
-                <img src="icons/candy.svg">
+                <h1 class="title_main_text">Цукерочки</h1>
+                <img class="title-pic" src="icons/candy.png">
             </div>
             <p class="description">
                 Дуже багато нових рішень та крутих фіч які економлять час та покращуюсь вашу роботу в десятки разів. Ласкаво просимо до ознайомлення. Немає часу на перегляд всього? Підпишись та отримуй найцікавіше в одному листі раз на тиждень.
             </p>
-            <div class="title_main">
-                <h3>Отримуйте першим нові цукерочки</h3>
-                <img src="icons/fire.svg">
-            </div>
-            <input class="input" type="text" placeholder="Ваш email">
+            <label>
+                <div class="title_main sub-title">
+                    <h3>Отримуйте першим нові цукерочки</h3>
+                    <img class="sub-title-pic" src="icons/fire.svg">
+                </div>
+                <input class="input" type="email" placeholder="Ваш email">
+                <input type="button" class="circleIcon">
+                <img src="icons/input_btn.svg" alt="btn" class="inputBtn">
+            </label>
         </div>
 
         <div class="right-section">
-            <div class="icons">
-                <span class="icon"><img src="icons/menu.svg"></span>
-                <span class="icon"><img src="icons/js.svg"></span>
-                <span class="icon"><img src="icons/linux.svg"></span>
-                <span class="icon"><img src="icons/css-3.svg"></span>
-                <span class="icon"><img src="icons/html-5.svg"></span>
-                <span class="icon"><img src="icons/ruby.svg"></span>
-                <span class="icon"><img src="icons/python.svg"></span>
-                <span class="icon"><img src="icons/ruby.svg"></span>
-                <span class="icon"><img src="icons/php.svg"></span>
-                <span class="icon"><img src="icons/android.svg"></span>
-                <span class="icon"><img src="icons/java.svg"></span>
-            </div>
+            <ul  class="icons">
+                <li class="icon"><a href="" ><img src="icons/menu.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/js.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/linux.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/css-3.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/html-5.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/ruby.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/python.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/ruby.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/php.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/android.svg" alt=""></a></li>
+                <li class="icon"><a href="" ><img src="icons/java.svg" alt=""></a></li>
+            </ul>
             <div class="section_framework">
                 <div class="item">
                     <div class="left_item">
@@ -91,9 +95,9 @@
                     </div>
                 </div>
             </div>
-            <div class="all_items">
+            <button class="all_items">
                 Всі 309 цукерочок
-            </div>
+            </button>
         </div>
 
     </div>
