--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content_area">
-        <div class="left-section">
+        <section class="left-section">
             <div class="title_main">
                 <h1 class="title_main_text">Цукерочки</h1>
                 <img class="title-pic" src="icons/candy.png">
@@ -25,9 +25,9 @@
                 <input type="button" class="circleIcon">
                 <img src="icons/input_btn.svg" alt="btn" class="inputBtn">
             </label>
-        </div>
+        </section>
 
-        <div class="right-section">
+        <section class="right-section">
             <ul  class="icons">
                 <li class="icon"><a href="" ><img src="icons/menu.svg" alt=""></a></li>
                 <li class="icon"><a href="" ><img src="icons/js.svg" alt=""></a></li>
@@ -46,16 +46,16 @@
                     <div class="left_item">
                         <p class="title">#Javascript</p>
                         <h4>Moeditor</h4>
-                        <div class="description_item">
-                            CSS фреймворк та директива GITHUB
-                        </div>
+                        <p class="description_item">CSS фреймворк та директива GITHUB</p>
                     </div>
                     <div class="right_item">
                         <div class="chose_section">
+
                         </div>
                         <div class="link"><a href="#">Link</a></div>
                     </div>
                 </div>
+                <hr class="hr">
                 <div class="item">
                     <div class="left_item">
                         <p class="title">#Javascript</p>
@@ -69,6 +69,7 @@
                         <div class="link"><a href="#">Link</a></div>
                     </div>
                 </div>
+                <hr class="hr">
                 <div class="item">
                     <div class="left_item">
                         <p class="title">#Javascript</p>
@@ -82,6 +83,7 @@
                         <div class="link"><a href="#">Link</a></div>
                     </div>
                 </div>
+                <hr class="hr">
                 <div class="item">
                     <div class="left_item">
                         <p class="title">#Javascript</p>
@@ -94,11 +96,12 @@
                         <div class="link"><a href="#">Link</a></div>
                     </div>
                 </div>
+                <hr class="hr">
             </div>
             <button class="all_items">
                 Всі 309 цукерочок
             </button>
-        </div>
+        </section>
 
     </div>
     <footer class="footer">
@@ -144,6 +147,7 @@
                 <li class="ftr_item"><a href="Ctrl+Enter">Ctrl+Enter</a></li>
             </ul>
         </div>
+        <div class="footer-discleimer">© 2019 Codeguida.com. При використанні матеріалів зворотнє посилання на сайт обов'язкове</div>
     </footer>
 </body>
 </html>
