--- a/index.html
+++ b/index.html
@@ -22,24 +22,25 @@
                     <img class="sub-title-pic" src="icons/fire.svg">
                 </div>
                 <input class="input" type="email" placeholder="Ваш email">
-                <input type="button" class="circleIcon">
-                <img src="icons/input_btn.svg" alt="btn" class="inputBtn">
+                <button type="submit" class="circleIcon">
+                    <img src="icons/input_btn.svg" alt="btn" class="inputBtn">
+                </button>
             </label>
         </section>
 
         <section class="right-section">
             <ul  class="icons">
-                <li class="icon"><a href="" ><img src="icons/menu.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/js.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/linux.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/css-3.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/html-5.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/ruby.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/python.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/ruby.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/php.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/android.svg" alt=""></a></li>
-                <li class="icon"><a href="" ><img src="icons/java.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/menu.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/js.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/linux.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/css-3.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/html-5.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/ruby.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/python.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/ruby.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/php.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/android.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/java.svg" alt=""></a></li>
             </ul>
             <div class="section_framework">
                 <div class="item">
