--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="description">
                 Дуже багато нових рішень та крутих фіч які економлять час та покращуюсь вашу роботу в десятки разів. Ласкаво просимо до ознайомлення. Немає часу на перегляд всього? Підпишись та отримуй найцікавіше в одному листі раз на тиждень.
             </p>
-            <label>
+            <label class="label">
                 <div class="title_main sub-title">
                     <h3>Отримуйте першим нові цукерочки</h3>
                     <img class="sub-title-pic" src="icons/fire.svg">
