--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 
         <section class="right-section">
             <ul  class="icons">
-                <li class="icon icon1"><a class="listLink" href="#" ><img class="img" src="icons/menu.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/js.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/linux.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/css-3.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/html-5.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/ruby.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/python.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/ruby.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/php.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/android.svg" alt=""></a></li>
-                <li class="icon"><a class="listLink" href="#" ><img class="img" src="icons/java.svg" alt=""></a></li>
+                <li class="icon icon1"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/menu.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/js.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/linux.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/css-3.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/html-5.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/ruby.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/python.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/ruby.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/php.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/android.svg" alt=""></a></li>
+                <li class="icon"><a class="listLink" href="javascript:void(0);" ><img class="img" src="icons/java.svg" alt=""></a></li>
             </ul>
             <ul class="section_framework">
                 <li class="item">
@@ -53,7 +53,7 @@
                         <div class="chose_section">
 
                         </div>
-                        <div class="link"><a href="#">Link</a></div>
+                        <div class="link"><a href="javascript:void(0);">Link</a></div>
                     </div>
                 </li>
                 <hr class="hr">
@@ -67,7 +67,7 @@
                         <div class="chose_section">
 
                         </div>
-                        <div class="link"><a href="#">Link</a></div>
+                        <div class="link"><a href="javascript:void(0);">Link</a></div>
                     </div>
                 </li>
                 <hr class="hr">
@@ -81,7 +81,7 @@
                         <div class="chose_section">
 
                         </div>
-                        <div class="link"><a href="#">Link</a></div>
+                        <div class="link"><a href="javascript:void(0);">Link</a></div>
                     </div>
                 </li>
                 <hr class="hr">
@@ -94,7 +94,7 @@
                     <div class="right_item">
                         <div class="chose_section">
                         </div>
-                        <div class="link"><a href="#">Link</a></div>
+                        <div class="link"><a href="javascript:void(0);">Link</a></div>
                     </div>
                 </li>
                 <hr class="hr">
