--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
       </ul>
     </div>
     <div class="ftr_column">
-      <span class="ftr_title">Зв’язок з редакцією</span>
+      <span class="ftr_title">Зв’язок&nbsp;з&nbsp;редакцією</span>
       <ul class="ftr_list">
         <li class="ftr_item">Загальні питання</li>
         <li class="ftr_item"><a href="admin@codeguida.com">admin@codeguida.com</a></li>
