--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                                                                                  alt=""></a></li>
       <li class="icon"><a class="listLink" href="javascript:void(0);"><img class="img" src="icons/js.svg" alt=""></a>
       </li>
-      <li class="icon"><a class="listLink" href="javascript:void(0);"><img class="img" src="icons/linux.svg" alt=""></a>
+      <li class="icon"><a class="listLink" href="javascript:void(0);"><img class="img img_linux" src="icons/linux.svg" alt=""></a>
       </li>
       <li class="icon"><a class="listLink" href="javascript:void(0);"><img class="img" src="icons/css-3.svg" alt=""></a>
       </li>
@@ -59,55 +59,55 @@
       <li class="item">
         <div class="left_item">
           <p class="title">#Javascript</p>
-          <h4>Moeditor</h4>
+          <h4 class="item_h4">Moeditor</h4>
           <p class="description_item">CSS фреймворк та директива GITHUB</p>
         </div>
         <div class="right_item">
           <div class="chose_section">
 
           </div>
-          <div class="link"><a href="javascript:void(0);">Link</a></div>
+          <div class="link"><a class="link_href" href="javascript:void(0);">Link</a></div>
         </div>
       </li>
 
       <li class="item">
         <div class="left_item">
           <p class="title">#Javascript</p>
-          <h4>Moeditor</h4>
+          <h4 class="item_h4">Moeditor</h4>
           <p class="description_item">CSS фреймворк та директива GITHUB</p>
         </div>
         <div class="right_item">
           <div class="chose_section">
 
           </div>
-          <div class="link"><a href="javascript:void(0);">Link</a></div>
+          <div class="link"><a class="link_href" href="javascript:void(0);">Link</a></div>
         </div>
       </li>
 
       <li class="item">
         <div class="left_item">
           <p class="title">#Javascript</p>
-          <h4>Moeditor</h4>
+          <h4 class="item_h4">Moeditor</h4>
           <p class="description_item">CSS фреймворк та директива GITHUB</p>
         </div>
         <div class="right_item">
           <div class="chose_section">
 
           </div>
-          <div class="link"><a href="javascript:void(0);">Link</a></div>
+          <div class="link"><a class="link_href" href="javascript:void(0);">Link</a></div>
         </div>
       </li>
 
       <li class="item">
         <div class="left_item">
           <p class="title">#Javascript</p>
-          <h4>Moeditor</h4>
+          <h4 class="item_h4">Moeditor</h4>
           <p class="description_item">CSS фреймворк та директива GITHUB</p>
         </div>
         <div class="right_item">
           <div class="chose_section">
           </div>
-          <div class="link"><a href="javascript:void(0);">Link</a></div>
+          <div class="link"><a class="link_href" href="javascript:void(0);">Link</a></div>
         </div>
       </li>
 
@@ -159,16 +159,16 @@
       <span class="ftr_title">Зв’язок&nbsp;з&nbsp;редакцією</span>
       <ul class="ftr_list">
         <li class="ftr_item">Загальні питання</li>
-        <li class="ftr_item"><a href="admin@codeguida.com">admin@codeguida.com</a></li>
+        <li class="ftr_item"><a class="ftr_link" href="admin@codeguida.com">admin@codeguida.com</a></li>
         <li class="ftr_item">Співпраця</li>
-        <li class="ftr_item"><a href="adv@codeguida.com">adv@codeguida.com</a></li>
+        <li class="ftr_item"><a class="ftr_link" href="adv@codeguida.com">adv@codeguida.com</a></li>
       </ul>
     </div>
     <div class="ftr_column">
       <span class="ftr_title">Знайшли помилку?</span>
       <ul class="ftr_list">
         <li class="ftr_item">Знайшли помилку — виділіть в тексті фрагмент з помилкую та нитисніть Ctrl+Enter</li>
-        <li class="ftr_item"><a href="Ctrl+Enter">Ctrl+Enter</a></li>
+        <li class="ftr_item"><a class="ftr_link" href="Ctrl+Enter">Ctrl+Enter</a></li>
       </ul>
     </div>
   </div>
